--- a/index.html
+++ b/index.html
@@ -14,38 +14,27 @@
 <body>
   <div class="container">
     <div class="box" id="sedans">
-      <img src="/images/icon-sedans.svg" alt="">
+      <img src="images/icon-sedans.svg" alt="">
       <h1>SEDANS</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p>
       <button>Learn More</button>
     </div>
     <div class="box" id="suvs" >
-      <img src="/images/icon-suvs.svg" alt="">
+      <img src="images/icon-suvs.svg" alt="">
       <h1>SUVS</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
       <button>Learn More</button>
     </div>
     <div class="box" id="luxury">
-      <img src="/images/icon-luxury.svg" alt="">
+      <img src="images/icon-luxury.svg" alt="">
       <h1>LUXURY</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
       <button>Learn More</button>
     </div>
   </div>
-  <!-- Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style. -->
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
